Moved to flakes

--- a/Multi Layer Perceptron/mlp.ipynb
+++ b/Multi Layer Perceptron/mlp.ipynb
@@ -246,7 +246,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To execute each layer sequentially pytorch provides the `Sequential` layer. Thus our network will be simply made of 3 layers (input, hidden, output), where each input signal must pass sequentially one after another to reach the output layer, starting from the input then."
+    "To execute each layer sequentially pytorch provides the `Sequential` layer. Thus our network will be simply made of 3 layers (input, hidden, output), thus forcing each input signal to propagate sequentially between each layer in order to reach the output layer.\n",
+    "Let's now create the model and train it."
    ]
   },
   {
